--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -105,7 +105,7 @@
             <a [routerLink]="['/mascota', mascota.id_mascota]" class="btn-info">
               <i class="fas fa-info-circle"></i> Ver más
             </a>
-            <a [routerLink]="['/encuesta']" class="btn-adopt">
+            <a [routerLink]="['/cuestionario']" class="btn-adopt">
               <i class="fas fa-heart"></i> Adoptar
             </a>
           </div>
@@ -152,7 +152,7 @@
       <h2>¿Listo para encontrar a tu alma gemela perruna?</h2>
       <p>Comienza tu viaje hacia una adopción perfecta con nuestro cuestionario emocional gratuito</p>
       <div class="hero-cta">
-        <a routerLink="/encuesta" class="btn-hero-primary">
+        <a routerLink="/cuestionario" class="btn-hero-primary">
           <i class="fas fa-clipboard-list"></i> Comenzar Encuesta Gratis
         </a>
         <a routerLink="/faq" class="btn-hero-secondary">
