--- a/src/app/components/cuestionario/cuestionario.component.css
+++ b/src/app/components/cuestionario/cuestionario.component.css
@@ -61,3 +61,16 @@
 .enviar-btn:hover {
   background-color: #5938cc;
 }
+
+.mensaje-error {
+  border: 1px solid #ff6b6b;
+  background-color: #ffeaea;
+  color: #d10000;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  margin-top: 1rem;
+  text-align: center;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
