--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,4 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@700;900&display=swap');
+.hero-subtitle {
+  color: #ffffff; /* Blanco puro */
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+  text-align: center;
+}
 
 :host {
   --primary: #A78BFA;
