--- a/src/app/components/petcard/petcard.component.css
+++ b/src/app/components/petcard/petcard.component.css
@@ -225,3 +225,10 @@
     padding: 20px;
   }
 }
+
+.mascota-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
