--- a/src/app/components/administrar/administrar.component.html
+++ b/src/app/components/administrar/administrar.component.html
@@ -57,7 +57,7 @@
               </div>
             </div>
           </td>
-          <td>{{mascota.perfilEmocional}}</td>
+          <td>{{mascota.perfil_emocional}}</td>
           <td>{{mascota.especie}}</td>
           <td>{{mascota.edad}} años</td>
           <td>
@@ -154,7 +154,7 @@
 
         <div class="form-group">
           <label>Perfil Emocional *</label>
-          <select class="form-control" [(ngModel)]="currentMascota.perfilEmocional" name="perfilEmocional" required>
+          <select class="form-control" [(ngModel)]="currentMascota.perfil_emocional" name="perfil_emocional" required>
             <option value="Aventurero">Aventurero</option>
             <option value="Tranquilo">Tranquilo</option>
             <option value="Juguetón">Juguetón</option>
@@ -175,7 +175,7 @@
 
         <div class="form-group">
           <label>Compatibilidad (%)</label>
-          <input type="number" min="0" max="100" class="form-control" [(ngModel)]="currentMascota.compatabilidad" name="compatabilidad">
+          <input type="number" min="0" max="100" class="form-control" [(ngModel)]="currentMascota.compatibilidad" name="compatibilidad">
         </div>
 
         <div class="form-group">
