Imagenes de mascotas

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -89,7 +89,7 @@
       <div class="pet-card" *ngFor="let mascota of mascotasDestacadas">
         <div class="pet-image">
           <i class="fas" [ngClass]="mascota.especie === 'Gato' ? 'fa-cat' : 'fa-dog'"></i>
-          <div class="pet-badge">{{ mascota.perfilEmocional }}</div>
+          <div class="pet-badge">{{ mascota.perfil_emocional }}</div>
         </div>
         <div class="pet-info">
           <h3>{{ mascota.nombre }}</h3>
