al finalizar encuesta te muestra el resultado

--- a/src/app/components/encuesta/encuesta.component.html
+++ b/src/app/components/encuesta/encuesta.component.html
@@ -13,7 +13,7 @@
       'baja': resultado.compatibilidad < 3
     }">
       <p *ngIf="resultado.compatibilidad >= 3">
-        ¡Eres altamente compatible con muchas mascotas!
+        ¡Eres altamente compatible con varias mascotas!
       </p>
       <p *ngIf="resultado.compatibilidad < 3">
         Te sugerimos una mascota tranquila y paciente.
